[package]
name = "xkcdpw"
version = "0.1.0"
authors = ["Jan Niemann <jan.niemann@mail.de>"]
edition = "2018"
description = "password generator based on simple to remember words"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
